# carvana-workflows

./: .gitignore  .gitleaksignore  AGENTS.md  MASTER_PLAN.md  MIGRATION.md  MIGRATION_AUDIT.md  PARITY_MATRIX.md  README.md  carma-bulk-search-scraper.user.js  package-lock.json  package.json  refactor-plan.md  repomix-output.xml  styleguide.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/scripts/: detect_rust_workspaces.py
.github/workflows/: ci.yml  release-userscripts.yml
.spec-workflow/: session.json
.spec-workflow/approvals/oracle-invoice-validation-alert/: approval_1761727007483_ln2bxcjpo.json  approval_1761733800000_v03req.json  approval_1761734700000_design.json  approval_1761735600000_tasks.json
.spec-workflow/approvals/workflow-menu-organization/: approval_1761559906148_75i1uelzg.json
.spec-workflow/specs/oracle-invoice-validation-alert/: design.md  requirements.md  tasks.md
.spec-workflow/specs/workflow-menu-organization/: design.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
apps/webextension/: README.md  extension.html  manifest.base.json  popup.html  sidepanel.html  tsconfig.json
apps/webextension/src/: background.ts  content.ts  extension-page.ts  popup.ts  sidepanel.ts
apps/webextension/test/: background.persistence-regression.test.ts
context/: jira-advanced-search-builder.md
context/excel/: excel_sheet_column_mappings.md
context/playbooks/: create_oracle_invoice.md
context/sites/atlassian/: jira_advanced_searching.md  jira_advanced_searching_fields_reference.md  jira_advanced_searching_functions_reference.md  jira_advanced_searching_keywords_reference.md  jira_advanced_searching_operators_reference.md  jira_basic_searching.md  jira_quick_searching.md  jira_saving_your_search_as_a_filter.md  jira_search_syntax_for_text_fields.md  jira_searching_for_issues.md  jira_working_with_search_results.md  jira_working_with_search_results_constructing_cron_expressions.md
excel/general/: dated_initialed_uuid.fx
excel/general/conditional_formatting/: highlight_duplicate_pairs.fx
excel/tr_new_titles_check_requests/conditional_formatting/: accepted_rejected_invoices.fx
excel/tr_new_titles_check_requests/filtering/: filter_visible_rows.fx
excel/tr_new_titles_check_requests/queries/: excel_sync.fx
excel/tr_upload_sheet/invoice_lines/: accounting_date_default.fx  attribute_3_pid_tag.fx  attribute_6_pid.fx  attribute_category_default.fx  distribution_combination_default.fx  expenditure_organization_default.fx  expenditure_type_default.fx  invoice_id_generator.fx  item_description_from_description.fx  line_type_default.fx  project_number_stock.fx  task_number_default.fx
excel/tr_upload_sheet/invoices/: accounting_date_default.fx  business_unit_default.fx  description_from_lines.fx  invoice_amount_from_lines_sum.fx  invoice_currency_default.fx  invoice_date_default.fx  invoice_id_generator.fx  invoice_number_stock_or_date_increment.fx  invoice_received_date_default.fx  invoice_type_default.fx  (+7 more)
rust/: Cargo.toml
rust/crates/cv_ext_contract/: Cargo.toml
rust/crates/cv_ext_contract/src/: action.rs  command.rs  lib.rs  log.rs  result.rs  rule.rs  settings.rs  site.rs  theme.rs  workflow.rs
rust/crates/cv_ext_contract/tests/: banned_family.rs
rust/crates/cv_ext_core/: Cargo.toml
rust/crates/cv_ext_core/src/: engine.rs  executor.rs  lib.rs  registry.rs  rule_engine.rs
rust/crates/cv_ext_core/tests/: engine_tests.rs  registry_tests.rs  rule_engine_tests.rs
rust/crates/cv_ext_sites_carma/: Cargo.toml
rust/crates/cv_ext_sites_carma/src/: lib.rs  rules.rs
rust/crates/cv_ext_sites_carma/tests/: rules_tests.rs
rust/crates/cv_ext_sites_jira/: Cargo.toml
rust/crates/cv_ext_sites_jira/src/: ap_transform.rs  capture.rs  jql.rs  lib.rs  rules.rs
rust/crates/cv_ext_sites_jira/src/ap_transform/: address.rs  constants.rs  extraction.rs  mod.rs  normalize.rs  transform.rs  transform_table_aoa.inc  vendor_rules.rs  vendor_rules_rules.inc
rust/crates/cv_ext_sites_jira/src/jql/: actions.rs  build.rs  format.rs  mod.rs  operators.rs  state.rs  tree.rs  value_types.rs
rust/crates/cv_ext_sites_jira/tests/: ap_transform_tests.rs  capture_tests.rs  jql_tests.rs  rules_tests.rs
rust/crates/cv_ext_sites_oracle/: Cargo.toml
rust/crates/cv_ext_sites_oracle/src/: lib.rs  rules.rs
rust/crates/cv_ext_storage/: Cargo.toml
rust/crates/cv_ext_storage/src/: keys.rs  lib.rs
rust/crates/cv_ext_storage/tests/: keys_tests.rs
rust/crates/cv_ext_ui_components/: Cargo.toml
rust/crates/cv_ext_ui_components/src/: lib.rs  panel_model.rs  site_profile.rs  status_model.rs  table_capture.rs  table_export.rs  table_model.rs  table_selection.rs
rust/crates/cv_ext_ui_components/tests/: panel_model_tests.rs  status_model_tests.rs  table_capture_tests.rs  table_export_tests.rs  table_model_tests.rs  table_selection_tests.rs
rust/crates/cv_ext_wasm/: Cargo.toml
rust/crates/cv_ext_wasm/src/: bridge_jql.rs  bridge_rules.rs  bridge_settings.rs  bridge_theme.rs  bridge_ui.rs  carma_ui.rs  carma_ui_impl.inc  commands.rs  commands_impl.inc  dom.rs  dom_impl.inc  dom_inject.rs  errors.rs  jql_panel.rs  jql_panel_impl.inc  lib.rs  menu_state.rs  oracle_banner.rs
rust/crates/cv_ext_wasm/src/ui_runtime/: mod.rs  table_dom.rs  table_dom_impl.inc
rust/crates/cv_ext_workflows_carma/: Cargo.toml
rust/crates/cv_ext_workflows_carma/src/: lib.rs  workflows.rs
rust/crates/cv_ext_workflows_jira/: Cargo.toml
rust/crates/cv_ext_workflows_jira/src/: capture.rs  lib.rs  workflows.rs
rust/crates/cv_ext_workflows_oracle/: Cargo.toml
rust/crates/cv_ext_workflows_oracle/src/: lib.rs  workflows.rs
scripts/: build-extension.mjs  build-release.mjs  build-wasm.mjs  build.mjs  dev-extension.mjs  dev.mjs  oracle-search-context-snippets.js  package-extensions.mjs  playwright-extension-audit.mjs  run-rust-cargo.mjs  serve-userscripts.mjs
scripts/cyberchef/: prepare-invoices.md
scripts/excel/: oracle_csv_creator.vba
scripts/table_capture/: jira-issue-capture-stock-vin-pid-regex.md  jira-issue-capture.js
tests/e2e/: TEST_PLAN.md
(+46 files in other folders)
