[workspace]
members = [
  "crates/cv_ext_contract",
  "crates/cv_ext_storage",
  "crates/cv_ext_core",
  "crates/cv_ext_sites_jira",
  "crates/cv_ext_sites_oracle",
  "crates/cv_ext_sites_carma",
  "crates/cv_ext_wasm"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Carvana Automation"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "NodeList",
  "console"
] }
js-sys = "0.3"
