[package]
name = "cv_ext_core"
version = "0.1.0"
edition = "2021"

[dependencies]
cv_ext_contract = { path = "../cv_ext_contract" }
cv_ext_workflows_jira = { path = "../cv_ext_workflows_jira" }
cv_ext_workflows_oracle = { path = "../cv_ext_workflows_oracle" }
cv_ext_workflows_carma = { path = "../cv_ext_workflows_carma" }
serde.workspace = true
