[package]
name = "cv_ext_core"
version = "0.1.0"
edition = "2021"

[dependencies]
cv_ext_contract = { path = "../cv_ext_contract" }
cv_ext_sites_jira = { path = "../cv_ext_sites_jira" }
cv_ext_sites_oracle = { path = "../cv_ext_sites_oracle" }
cv_ext_sites_carma = { path = "../cv_ext_sites_carma" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true

[lints]
workspace = true
