[package]
name = "cv_ext_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cv_ext_contract = { path = "../cv_ext_contract" }
cv_ext_core = { path = "../cv_ext_core" }
cv_ext_sites_jira = { path = "../cv_ext_sites_jira" }
cv_ext_ui_components = { path = "../cv_ext_ui_components" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true
thiserror.workspace = true
gloo-timers.workspace = true
async-trait.workspace = true
futures.workspace = true
